--- a/modules/toollabs/templates/static-server.conf.erb
+++ b/modules/toollabs/templates/static-server.conf.erb
@@ -19,7 +19,7 @@ server {
 
     <%- if @ssl_certificate_name != false -%>
     # Serve both HTTP and HTTPS
-    listen 443 default_server ssl spdy;
+    listen 443 default_server ssl http2;
 
     ssl_certificate /etc/ssl/localcerts/<%= @ssl_certificate_name %>.chained.crt;
     ssl_certificate_key /etc/ssl/private/<%= @ssl_certificate_name %>.key;
