--- a/modules/profile/templates/exim/exim4.conf.mailman.erb
+++ b/modules/profile/templates/exim/exim4.conf.mailman.erb
@@ -116,7 +116,7 @@ acl_check_rcpt:
 	# Accept mail for postmaster without further policy checking,
 	# for compliance with the RFCs
 	accept local_parts = postmaster : abuse
-		set acl_m2 = skip_spamd
+		set acl_m2 = skip_spam_checks
 
 	# Verify the recipient address for local domains, or require the
 	# recipient domain to exist for remote domains
@@ -135,12 +135,19 @@ acl_check_data:
 	accept hosts = +wikimedia_nets
 		set acl_m0 = trusted relay
 
+	# Skip if so requested
+	accept condition = ${if eq{$acl_m2}{skip_spam_checks}}
+
+	# Reject messages from IP addresses listed in DNSBL
+	# This is a warn for testing.  For production...
+	#	* Change to delay & drop
+	#	* Change log_message to message
+	warn log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
+		dnslists = zen.spamhaus.org
+
 	# Only run through SpamAssassin if requested for this domain and
 	# the message is not too large
 	accept condition = ${if >{$message_size}{400K}}
-
-	# Skip if so requested
-	accept condition = ${if eq{$acl_m2}{skip_spamd}}
 
 	# Add spam headers if score >= 1
 	warn spam = nonexistent:true
