WIP: Cassandra: Include only instance DNS' in the list of seeds
Change-Id: I0a00f1d8efb143edfe18a8749dfbda3ba32753e3

--- a/modules/profile/templates/cassandra/seeds.erb
+++ b/modules/profile/templates/cassandra/seeds.erb
@@ -1,9 +1,13 @@
 <%-
 seeds = []
+ferm_seeds = []
 @all_instances.each do |host, instances|
-  seeds << host
+  ferm_seeds << host
+  seeds << host if instances.empty?
   hostname = host.split(".").shift()
   instances.each do |instance, _|
-    seeds << host.gsub(hostname, "#{hostname}-#{instance}")
+    instance_host = host.gsub(hostname, "#{hostname}-#{instance}")
+    seeds << instance_host
+    ferm_seeds << instance_host
   end
-end -%><%= seeds.join "|" -%>
+end -%><%= "#{seeds.join ','}|#{ferm_seeds.join ','}" -%>
