--- a/modules/profile/templates/exim/exim4.conf.mailman.erb
+++ b/modules/profile/templates/exim/exim4.conf.mailman.erb
@@ -125,6 +125,13 @@ acl_check_rcpt:
 	# Check whether the sender address domain exists
 	require verify = sender
 
+	# Reject messages from IP addresses listed in DNSBL
+	# This is a warn for testing. After testing...
+	#	* Change to delay & drop
+	#	* Change log_message to message
+	warn log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
+		dnslists = zen.spamhaus.org
+
 	accept
 
 acl_check_connect:
