dumps: Align box-shadow with WikimediaUI standard
See Ib32072e8770ccc120f732498ef8e18b6ce2bf8ff

Change-Id: I54fa084321486ca4de1ea039d85d43378a4424dd

--- a/modules/snapshot/files/dumps/templates/report.html
+++ b/modules/snapshot/files/dumps/templates/report.html
@@ -47,18 +47,18 @@
                 }
                 li.in-progress {
                         border-top: 3px solid #3366cc;
-                        box-shadow: 0 8px 12px -8px #375baf;
                         font-weight: bold;
+                        box-shadow: 0 1px 1px rgba( 0, 0, 0, 0.15 );
                 }
                 .done {
                         border-top: 3px solid #00af89;
-                        box-shadow: 0 8px 12px -8px #0a4337;
+                        box-shadow: 0 1px 1px rgba( 0, 0, 0, 0.15 );
                 }
                 .failed {
                         color: #b32424;
                         font-weight: bold;
                         border-top: 3px solid #b32424;
-                        box-shadow: 0 8px 12px -8px #5a1212;
+                        box-shadow: 0 1px 1px rgba( 0, 0, 0, 0.15 );
                 }
                 .waiting {
                         color: #c8ccd1;
