--- a/modules/profile/templates/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/cumin/aliases.yaml.erb
@@ -92,7 +92,7 @@ lvs-codfw: A:lvs and A:codfw
 lvs-eqiad: A:lvs and A:eqiad
 lvs-esams: A:lvs and A:esams
 lvs-ulsfo: A:lvs and A:ulsfo
-maps: P{R:class = role::maps::master or R:class = role::maps::slave}
+maps: P{R:class = role::maps::master or R:class = role::maps::slave or R:class = role::maps::test::slave or R:class = role::maps::test::master}
 maps-canary: P{maps1001.eqiad.wmnet}
 maps-test: P{R:class = role::maps::test::master or R:class = role::maps::test::slave}
 memcached: P{R:class = role::mediawiki::memcached}
