--- a/modules/role/templates/exim/exim4.conf.mx.erb
+++ b/modules/role/templates/exim/exim4.conf.mx.erb
@@ -156,6 +156,13 @@ acl_check_rcpt:
 	# Check whether the sender address domain exists
 	require verify = sender
 
+	# Drop connections from IP addresses listed in DNSBL
+	# This is a warn for testing. After testing...
+	#	* Change to delay & drop
+	#	* Change log_message to message
+	warn log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
+		dnslists = zen.spamhaus.org
+
 	accept
 
 acl_check_connect:
