MX: Change zen.spamhaus.org DNSBL action from warn to drop
Drop conncetions from IP addresses listed in zen.spamhaus.org DNSBL

Bug: T175879
Change-Id: I2e34f1fb889a1d04d8b58106bc9eb40191b94ed3

--- a/modules/role/templates/exim/exim4.conf.mx.erb
+++ b/modules/role/templates/exim/exim4.conf.mx.erb
@@ -157,11 +157,9 @@ acl_check_rcpt:
 	require verify = sender
 
 	# Drop connections from IP addresses listed in DNSBL
-	# This is a warn for testing. After testing...
-	#	* Change to delay & drop
-	#	* Change log_message to message
-	warn log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
+	drop log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
 		dnslists = zen.spamhaus.org
+		delay 15s
 
 	accept
 
