Beta: Scap: canary_dashboard_url to beta logstash
Bug: T168211
Change-Id: I40609c6a488a9748f9262095e970e70b5d5d497f

--- a/modules/scap/templates/scap.cfg.erb
+++ b/modules/scap/templates/scap.cfg.erb
@@ -100,3 +100,4 @@ udp2log_host: deployment-fluorine02.deployment-prep.eqiad.wmflabs
 wmf_realm: labs
 # No pybal in labs, but pretend that there is anyway
 pybal_interface: lo
+canary_dashboard_url: https://logstash-beta.wmflabs.org/goto/ff3530979bc5a54b9779ac9cbd4fc819
