Gerrit: Use systemd::service for systemd
This is a perquisite to removing the gerrit deb.

Almost ready to remove the deb.

Also makes LimitNOFILE configuable, but uses the same value
as before.

See
https://github.com/wikimedia/operations-debs-gerrit/blob/master/debian/gerrit.service#L18

Change-Id: I33951f9d204d4cad03903216cf86026b73eecf80

--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -66,7 +66,7 @@
     heapLimit = <%= @heap_limit %>
     slave = <%= @slave %>
 [core]
-    packedGitOpenFiles = 6000
+    packedGitOpenFiles = <%= @git_open_files %>
     packedGitLimit = 2g
     packedGitWindowSize = 16k
     streamFileThreshold = 100m
