openstack: pdns auth module/role/profile
Rename module from labs_dns to pdns_server

Bug: T171494
Change-Id: Ib021f565b5c528dce8d94209b70d424ad7735e00

--- a/modules/role/templates/mariadb/grants/dns.sql.erb
+++ b/modules/role/templates/mariadb/grants/dns.sql.erb
@@ -1,29 +1,29 @@
 -- pdns, localhost
 
 CREATE USER 'pdns_admin'@'localhost'
-IDENTIFIED BY '<%=@pdns_admin_db_password %>';
+IDENTIFIED BY '<%=@pdns_admin_db_pass %>';
 
 GRANT SELECT, INSERT, UPDATE, DELETE, CREATE, DROP, INDEX, ALTER,
       CREATE TEMPORARY TABLES
 ON `pdns`.* TO 'pdns_admin'@'localhost';
 
 CREATE USER 'pdns'@'localhost'
-IDENTIFIED BY '<%=@pdns_db_password %>';
+IDENTIFIED BY '<%=@pdns_db_pass %>';
 
 GRANT SELECT, INSERT, UPDATE, DELETE, CREATE TEMPORARY TABLES
 ON `pdns`.* TO 'pdns'@'localhost';
 
--- designate, designate_host
+-- designate, designate_host_ip
 
-CREATE USER 'pdns_admin'@'<%=@designate_host %>'
-IDENTIFIED BY '<%=@pdns_admin_db_password %>';
+CREATE USER 'pdns_admin'@'<%=@designate_host_ip %>'
+IDENTIFIED BY '<%=@pdns_admin_db_pass %>';
 
 GRANT SELECT, INSERT, UPDATE, DELETE, CREATE, DROP, INDEX, ALTER,
       CREATE TEMPORARY TABLES
-ON `pdns`.* TO 'pdns_admin'@'<%=@designate_host %>';
+ON `pdns`.* TO 'pdns_admin'@'<%=@designate_host_ip %>';
 
-CREATE USER 'pdns'@'<%=@designate_host %>'
-IDENTIFIED BY '<%=@pdns_db_password %>';
+CREATE USER 'pdns'@'<%=@designate_host_ip %>'
+IDENTIFIED BY '<%=@pdns_db_pass %>';
 
 GRANT SELECT, INSERT, UPDATE, DELETE, CREATE TEMPORARY TABLES
-ON `pdns`.* TO 'pdns'@'<%=@designate_host %>';
+ON `pdns`.* TO 'pdns'@'<%=@designate_host_ip %>';
