--- a/modules/pdns_server/templates/pdns.conf.erb
+++ b/modules/pdns_server/templates/pdns.conf.erb
@@ -14,6 +14,7 @@ query-local-address=<% if has_variable?("dns_auth_query_address") then %><%= @dn
 
 # dig SOA wmflabs.org
 # dig SOA eqiad.wmflabs
+# Note: Make this per deployment
 default-soa-name=labs-ns0.wikimedia.org
 
 receiver-threads=8
