docker::baseimages: add stretch base image
Change-Id: If2a00dfde08ddedbd23f48026e4f9d877feb6a7b

--- a/modules/docker/templates/images/stretch.yaml.erb
+++ b/modules/docker/templates/images/stretch.yaml.erb
@@ -32,7 +32,7 @@ packages:
     backports:
       - deb http://mirrors.wikimedia.org/debian/ stretch-backports main contrib
   trusted-keys:
-    - /etc/apt/trusted.gpg
+    - <%= @stretch_keyring %>
 plugins:
 <%- if @proxy_address -%>
   apt_proxy:
