contint::apache: disallow .htaccess usage
Change-Id: Iad1b17910f1d9d1e112e0e92c99db925270908ce

--- a/modules/contint/templates/apache/integration.wikimedia.org.erb
+++ b/modules/contint/templates/apache/integration.wikimedia.org.erb
@@ -27,7 +27,7 @@
 
     <Directory /srv/org/wikimedia/integration>
         Options FollowSymLinks
-        AllowOverride All
+        AllowOverride None
         Order allow,deny
         allow from all
     </Directory>
