tendril::apache: disallow .htaccess usage
Change-Id: I9b35ad2bc5fed0e351c086491c9bc003d58c4426

--- a/modules/tendril/templates/apache/tendril.wikimedia.org.erb
+++ b/modules/tendril/templates/apache/tendril.wikimedia.org.erb
@@ -17,7 +17,7 @@
         SSLRequireSSL
         Options +ExecCGI +FollowSymLinks
         DirectoryIndex index.php
-        AllowOverride All
+        AllowOverride None
         # This is only for pre 2.4 apache versions. In apache 2.4 IP based
         # authorization is just another Require and is chained
         AuthName "<%= @auth_name %>"
