noc::apache: disallow .htaccess usage
Change-Id: Iaab640879a16712b296e22ed6de47d43695e60cf

--- a/modules/noc/templates/noc.wikimedia.org.erb
+++ b/modules/noc/templates/noc.wikimedia.org.erb
@@ -24,7 +24,7 @@
     CustomLog /var/log/apache2/access.log wmf
 
     <Directory />
-        AllowOverride All
+        AllowOverride None
         Require all granted
     </Directory>
 
