librenms::apache: disallow .htaccess usage
Change-Id: Ib338e7a50053e70424e5162644ac752dbd9bcc39

--- a/modules/librenms/templates/apache.conf.erb
+++ b/modules/librenms/templates/apache.conf.erb
@@ -22,7 +22,7 @@
     DocumentRoot <%= @install_dir %>/html
     <Directory <%= @install_dir %>/html>
         Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
+        AllowOverride None
         Require all granted
     </Directory>
 
