Extend library hint for libxml2
Also sort alphabetically.

Change-Id: Iff03b2094492233ac17853925cd5db8fe63f0b6e

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -5,10 +5,11 @@ jessie = debian, 8
 stretch = debian, 9
 
 [libraries]
-openssl = libssl, libcrypto
-gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
-pam = libpam, libpamc, libpam_misc
-libonig = libonig
-libgd2 = libgd
 file = libmagic
 freexl = libfreexl
+gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
+libgd2 = libgd
+libonig = libonig
+libxml2 = libxml2
+openssl = libssl, libcrypto
+pam = libpam, libpamc, libpam_misc
