--- a/modules/base/templates/remote_syslog.conf.erb
+++ b/modules/base/templates/remote_syslog.conf.erb
@@ -1,12 +1,27 @@
 # NOTE: This file is managed by Puppet.
 
+<%- if @central_hosts_tls %>
+# make gtls driver the default
+$DefaultNetstreamDriver gtls
+
+$DefaultNetstreamDriverCAFile /var/lib/puppet/ssl/certs/ca.pem
+$DefaultNetstreamDriverCertFile /etc/rsyslog/ssl/cert.pem
+$DefaultNetstreamDriverKeyFile /etc/rsyslog/ssl/server.key
+
+$ActionSendStreamDriverAuthMode x509/certvalid
+$ActionSendStreamDriverMode 1 # run driver in TLS-only mode
+<% end -%>
+
 # By default, rsyslog will truncate programname[pid] to 32 characters.  This
 # is a problem if logging to logstash, because programname will not be
 # parseable.  This format template removes the 32 character limit.
 # See also: http://www.rsyslog.com/sende-messages-with-tags-larger-than-32-characters/
-
 $template LongTagForwardFormat,"<%%PRI%>%TIMESTAMP:::date-rfc3339% %HOSTNAME% %syslogtag%%msg:::sp-if-no-1st-sp%%msg%"
 
 <% @central_hosts.sort.each do |log_host| %>
 *.info;mail.none;authpriv.none;cron.none @<%= log_host %>;LongTagForwardFormat
 <% end %>
+
+<%- @central_hosts_tls.sort.each do |log_host| %>
+*.info;mail.none;authpriv.none;cron.none @@<%= log_host %>;LongTagForwardFormat
+<% end -%>
