Lists: Change zen.spamhaus.org DNSBL action from warn to drop
Drop connections from IP addresses listed in zen.spamhaus.org DNSBL

Bug: T175878
Change-Id: I65132d308234bf931ff15127bf15bf67275ed43b

--- a/modules/profile/templates/exim/exim4.conf.mailman.erb
+++ b/modules/profile/templates/exim/exim4.conf.mailman.erb
@@ -125,12 +125,10 @@ acl_check_rcpt:
 	# Check whether the sender address domain exists
 	require verify = sender
 
-	# Reject messages from IP addresses listed in DNSBL
-	# This is a warn for testing. After testing...
-	#	* Change to delay & drop
-	#	* Change log_message to message
-	warn log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
+	# Drop connections from IP addresses listed in DNSBL
+	drop message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
 		dnslists = zen.spamhaus.org
+		delay = 15s
 
 	accept
 
