Gerrit: Use strings in container.slave
Change-Id: Idc207af7c1b17ff9e75073a08bdd0dab9c896a63

--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -64,7 +64,7 @@
     javaHome = <%= @java_home %>
     javaOptions = <% @java_options.each do |jvm_opt| %><%= jvm_opt %> <% end %>
     heapLimit = <%= @heap_limit %>
-    slave = <%= @slave %>
+    slave = "<%= @slave %>"
 [core]
     packedGitOpenFiles = <%= @git_open_files %>
     packedGitLimit = 2g
