--- a/modules/gerrit/templates/initscripts/gerrit.systemd.erb
+++ b/modules/gerrit/templates/initscripts/gerrit.systemd.erb
@@ -12,7 +12,7 @@ StandardError=syslog
 SyslogIdentifier=gerrit2
 EnvironmentFile=/etc/default/gerrit
 ExecStart=/var/lib/gerrit2/review_site/bin/gerrit.sh start
-ExecReload=/var/lib/gerrit2/review_site/bin/gerrit.sh reload
+ExecReload=/var/lib/gerrit2/review_site/bin/gerrit.sh restart
 ExecStop=/var/lib/gerrit2/review_site/bin/gerrit.sh stop
 # NOFILE :  GERRIT_FDS, determined by "core.packedGitOpenFiles" in the script
 LimitNOFILE=<%= @git_open_files %>
