profile::docker::builder: add proxy settings to apt_config
At the same time, drop configuration for the apt-proxy plugin of
bootstrap-vz, that we're not currently using anywhere, from the profile.

Change-Id: I5a697620a3efc7fd2b24dd2119941748b8e5d5c8

--- a/modules/profile/templates/docker/production-images-config.yaml.erb
+++ b/modules/profile/templates/docker/production-images-config.yaml.erb
@@ -1,3 +1,6 @@
+<%- if @debian_security_proxy -%>
+apt_options: "-o Acquire::http::Proxy::security.debian.org=<%= @debian_security_proxy  %> -o Acquire::http::Proxy::security-cdn.debian.org=<%= @debian_security_proxy %>
+<%- end -%>
 registry: <%= @registry %>
 username: <%= @username %>
 password: <%= @password %>
