profile::docker::builder: add proxy settings to build config
Change-Id: I5a697620a3efc7fd2b24dd2119941748b8e5d5c8

--- a/modules/profile/templates/docker/production-images-config.yaml.erb
+++ b/modules/profile/templates/docker/production-images-config.yaml.erb
@@ -1,3 +1,5 @@
+<%- if @proxy_host and @proxy_host != '' -%>
+apt_options: "-o Acquire::http::Proxy::security.debian.org=<%= @proxy_host %>:<%= @proxy_port %> -o Acquire::http::Proxy::security-cdn.debian.org=<%= @proxy_host %>:<%= @proxy_port %>"
 registry: <%= @registry %>
 username: <%= @username %>
 password: <%= @password %>
