profile::docker::builder: add proxy settings to build config
Change-Id: I5a697620a3efc7fd2b24dd2119941748b8e5d5c8

--- a/modules/profile/templates/docker/production-images-config.yaml.erb
+++ b/modules/profile/templates/docker/production-images-config.yaml.erb
@@ -1,3 +1,6 @@
+<%- if @proxy_address and @proxy_address != '' -%>
+http_proxy: "http://<%= @proxy_address %>:<%= @proxy_port %>"
+<%- end -%>
 registry: <%= @registry %>
 username: <%= @username %>
 password: <%= @password %>
