WMCS: fix Cumin configuration
* Move the SSH options to a dedicated ssh_config file. This allows also
  to have the same options to silent the known hosts for the
  ProxyCommand too.
* Remove the no-port-forwarding limitation in the userkey on the proxy
  instances.
* Add an example alias

Bug: T175712
Change-Id: I4b866ea49e26b5aaeb550a8a123cec60a0861dca

--- a/modules/profile/templates/openstack/main/cumin/config.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/config.yaml.erb
@@ -7,13 +7,7 @@ environment:
 
 clustershell:
     ssh_options:
-        - '-o BatchMode=yes'
-        - '-o ConnectTimeout=2'
-        - '-o StrictHostKeyChecking=no'
-        - '-o UserKnownHostsFile=/dev/null'
-        - '-o GlobalKnownHostsFile=/dev/null'
-        - '-o LogLevel=QUIET'
-        - '-o ProxyCommand="ssh -a -W %h:%p bastion-restricted.wmflabs.org"'
+        - '-F <%= @ssh_config_path %>'
 
 openstack:
     auth_url: <%= @keystone_protocol %>://<%= @keystone_host %>:<%= @keystone_port %>
