--- a/modules/profile/templates/openstack/main/cumin/userkey.erb
+++ b/modules/profile/templates/openstack/main/cumin/userkey.erb
@@ -1,2 +1,2 @@
 # Cumin Masters. TODO: use 'restrict' once available across the fleet (> jessie)
-from="<%= @ssh_authorized_sources %>",no-agent-forwarding,no-port-forwarding,no-x11-forwarding,no-user-rc <%= @cumin_master_pub_key %>
+from="<%= @ssh_authorized_sources %>",no-agent-forwarding,<% if @cumin_auth_group == 'cumin_masters' %>no-port-forwarding,<% end %>no-x11-forwarding,no-user-rc <%= @cumin_master_pub_key %>
