VCL: insure against coalesce in MISS2PASS pathway
Change-Id: I7a3662e9ebaac30c0ed3219226acd8242bfe7d7c

--- a/modules/varnish/templates/vcl/wikimedia-backend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-backend.vcl.erb
@@ -95,6 +95,7 @@ sub vcl_recv {
 			unset req.http.X-Next-Is-Cache;
 			<%- if not @vcl_config.fetch("backend_warming", false) -%>
 			set req.http.X-MISS2PASS = 1;
+			set req.hash_ignore_busy = true; // insurance against coalescing
 			<%- end -%>
 		}
 	}
