--- a/modules/statistics/templates/published-datasets-sync.sh.erb
+++ b/modules/statistics/templates/published-datasets-sync.sh.erb
@@ -3,6 +3,8 @@
 source='<%= @published_datasets_path %>'
 dest='<%= @published_datasets_destination %>'
 
+lockfile=/var/lock/published-datasets-sync
+
 verbose="-v"
 if [ "${1}" == "-q" ]; then
     verbose=""
@@ -16,7 +18,7 @@ Rsyncs ${source} to ${dest}, preserving group, timestamp and permissions with de
 "
     exit 0
 else
-    echo /usr/bin/rsync -rgptL $verbose --delete $source/ $dest/
+    echo /usr/bin/flock -n $lockfile -c "/usr/bin/rsync -rgptL $verbose --delete $source/ $dest/"
 fi
 
-/usr/bin/rsync -rgptL $verbose --delete $source/ $dest/
+/usr/bin/flock -n $lockfile -c "/usr/bin/rsync -rgptL $verbose --delete $source/ $dest/"
