Gerrit: Enable ui for slaves
Note that it will still be in read only, just you will be able
to see what the slave has data wise.

Bug: T176532
Change-Id: I3bd7021ab531b54e5155e98a1f4adc12f9c42275

--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -65,6 +65,9 @@
     javaOptions = <% @java_options.each do |jvm_opt| %><%= jvm_opt %> <% end %>
     heapLimit = <%= @heap_limit %>
     slave = <%= @slave %>
+    <%- if @slave %>
+    daemonOpt = --enable-httpd --enable-sshd
+    <%- end -%>
 [core]
     packedGitOpenFiles = 6000
     packedGitLimit = 2g
