puppet: switch all production hosts to the future parser
Since we don't want to be forced to move all production hosts to the
"future" environment, but we can't migrate the WMCS VMs (basically,
everything in the 'labs' realm) to the future parser as well:

* Add an additional_client_config variable to base::puppet
* Use a logical switch (that can be removed in the future) to add the
  puppet configurations to move to the future parser
* Set it to false in hieradata/labs.yaml

Bug: T171704
Change-Id: I1d27fa11bf2cebea59f05ea3177c1c24429bf968

--- a/modules/base/templates/puppet.conf.d/10-main.conf.erb
+++ b/modules/base/templates/puppet.conf.d/10-main.conf.erb
@@ -12,6 +12,9 @@ factpath = $vardir/lib/facter
 <%- unless @environment.nil? || @environment == '' -%>
 environment = <%= @environment %>
 <%- end -%>
+<%- @additional_agent_config.each do |k, v| -%>
+<%= k %> = <%= v %>
+<%- end -%>
 
 [agent]
 <%- if @use_srv_record -%>
