puppet: switch all hosts to the future parser
Bug: T171704
Change-Id: I1d27fa11bf2cebea59f05ea3177c1c24429bf968

--- a/modules/base/templates/puppet.conf.d/10-main.conf.erb
+++ b/modules/base/templates/puppet.conf.d/10-main.conf.erb
@@ -12,6 +12,8 @@ factpath = $vardir/lib/facter
 <%- unless @environment.nil? || @environment == '' -%>
 environment = <%= @environment %>
 <%- end -%>
+parser = future
+manifest=$confdir/manifests
 
 [agent]
 <%- if @use_srv_record -%>
