--- a/modules/apache/templates/static_site.conf.erb
+++ b/modules/apache/templates/static_site.conf.erb
@@ -25,7 +25,7 @@
 
     <Directory />
         Order Deny,Allow
-        AllowOverride All
+        AllowOverride None
     </Directory>
 
     <Directory "<%= @docroot %>">
