phragile: disallow .htaccess usage
This is an effort to reduce the usage of .htaccess in our
puppet codebase. As far as I can see this apache config
is used in one labs instance that I can't access, but
I doubt it uses any .htaccess. If any, we could amend
this code review and limit the Directives from All to only
the ones used in the .htaccess.

To check the presence of .htaccess files:
- sudo apachectl -S
- find the path of the virtualhost serving the phragile website
- find its DocumentRoot path
- run find $document_root_path -iname .htaccess

Change-Id: I1dad37d63cc3bbc1a6737c890854913e047c7bae

--- a/modules/phragile/templates/apache.conf.erb
+++ b/modules/phragile/templates/apache.conf.erb
@@ -5,7 +5,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ /index.php [L]
 
 <Directory />
-  AllowOverride All
+  AllowOverride None
   Require all granted
 </Directory>
 
