VCL: Exp cache admission policy for varnish-be
Introduce a hiera setting called `cache::admission_param` to toggle and
tune Exp cache admission policy (admission probability exponentially
decreasing with size) on varnish backends.

The setting must be an integer greater than 0, whose optimal value is
discussed in T144187#2775914.

Note that lowering `cache::admission_param` lowers the proability of an
object to be admitted in cache. Setting the value to 1 effectively
enables "pass-only" mode, which might be useful to decrease the workload
in particular operational scenarios (such as backend errors due to
eccessive storage usage / lock contention - T145661) .

Bug: T144187
Bug: T145661
Change-Id: I8cdcf936f36f681c0414454d7e7d146adabe2d9d

--- a/modules/varnish/templates/vcl/wikimedia-backend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-backend.vcl.erb
@@ -1,5 +1,15 @@
 vcl 4.0;
 
+<% if @vcl_config.fetch("admission_param", 0).to_i > 0 -%>
+// Includes for Exp cache admission policy, admission probability exponentially
+// decreasing with size. See vcl_backend_response. T144187
+C{
+	#include <stdlib.h>
+	#include <math.h>
+
+	const int adm_param =  <%= @vcl_config.fetch("admission_param") %>;
+}C
+<% end -%>
 // common backend code for all clusters
 include "<%= @varnish_include_path %>wikimedia-common_<%= @vcl %>.inc.vcl";
 
@@ -197,6 +207,21 @@ sub vcl_backend_response {
 	unset beresp.http.Public-Key-Pins;
 	unset beresp.http.Public-Key-Pins-Report-Only;
 
+<% if @vcl_config.fetch("admission_param", 0).to_i > 0 -%>
+C{
+	const struct gethdr_s hdr = { HDR_BERESP, "\017Content-Length:" };
+	const int clen = atoi(VRT_GetHdr(ctx, &hdr));
+	const double admissionprob = exp(-clen/adm_param);
+	const double urand = drand48();
+
+	// If admission test succeeds, mark as uncacheable (set ttl=0, do not
+	// create hit-for-pass)
+	if (admissionprob < urand) {
+		VRT_l_beresp_ttl(ctx,0);
+		VRT_l_beresp_uncacheable(ctx,1);
+	}
+}C
+<% end -%>
 	call cluster_be_backend_response_early; // e.g. to fix up Vary-slotting in bereq
 	call wm_common_backend_response;
 	call cluster_be_backend_response;
