--- a/modules/phabricator/templates/initscripts/aphlict.systemd.erb
+++ b/modules/phabricator/templates/initscripts/aphlict.systemd.erb
@@ -1,14 +1,18 @@
 [Unit]
 Description=Aphlict - Phabricator notification service
-After=network.target auditd.service
+After=syslog.target network.target auditd.service mysql.service
+Before=apache2.service
 
 [Service]
+Type=forking
 User=<%= scope.lookupvar('phabricator::aphlict::user') %>
 Group=<%= scope.lookupvar('phabricator::aphlict::group') %>
-ExecStart=<%= scope.lookupvar('phabricator::aphlict::aphlict_cmd') %>
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
-Restart=on-failure
+Environment="PHABRICATOR_ENV=aphlict"
+ExecStartPre=-/bin/mkdir -p /var/run/phd/
+ExecStartPre=/bin/chown -R phd:phd /var/run/phd/
+ExecStart=<%= scope.lookupvar('phabricator::aphlict::aphlict_start_cmd') %>
+ExecReload=<%= scope.lookupvar('phabricator::aphlict::aphlict_restart_cmd') %>
+ExecStop=<%= scope.lookupvar('phabricator::aphlict::aphlict_stop_cmd') %>
 
 [Install]
 WantedBy=multi-user.target
