--- a/modules/phabricator/templates/initscripts/aphlict.upstart.erb
+++ b/modules/phabricator/templates/initscripts/aphlict.upstart.erb
@@ -16,4 +16,4 @@ umask 022
 
 expect stop
 
-exec <%= scope.lookupvar('phabricator::aphlict::aphlict_cmd') %>
+exec <%= scope.lookupvar('phabricator::aphlict::aphlict_start_cmd') %>
