--- a/modules/phabricator/templates/initscripts/aphlict.systemd.erb
+++ b/modules/phabricator/templates/initscripts/aphlict.systemd.erb
@@ -3,11 +3,15 @@ Description=Aphlict - Phabricator notification service
 After=network.target auditd.service
 
 [Service]
+Type=forking
 User=<%= scope.lookupvar('phabricator::aphlict::user') %>
 Group=<%= scope.lookupvar('phabricator::aphlict::group') %>
-ExecStart=<%= scope.lookupvar('phabricator::aphlict::aphlict_cmd') %>
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
+PIDFile=/var/run/aphlict/aphlict.pid
+Environment="PHABRICATOR_ENV=aphlict"
+ExecStartPre=-/bin/mkdir -p /var/run/aphlict/
+ExecStartPre=/bin/chown -R aphlict:aphlict /var/run/aphlict/
+ExecStart=<%= scope.lookupvar('phabricator::aphlict::aphlict_start_cmd') %>
+ExecStop=<%= scope.lookupvar('phabricator::aphlict::aphlict_stop_cmd') %>
 Restart=on-failure
 
 [Install]
