--- a/modules/profile/templates/exim/exim4.conf.mailman.erb
+++ b/modules/profile/templates/exim/exim4.conf.mailman.erb
@@ -141,43 +141,43 @@ acl_check_helo:
 	# warn if remote tries to send HELO <any ip> because RFC2821 4.1.3
 	# indicates HELO must be followed by domain or ip literal
 	# change from warn to delay & drop to enforce this
-	warn message = HELO failure ref0
+	warn log_message = HELO failure ref0 (Remote said: HELO $sender_helo_name - Problem: HELO must contain a domain name or ip literal wrapped with square brackets [])
 		condition   = ${if isip{$sender_helo_name}}
 		!hosts      = +wikimedia_nets : +relay_from_hosts
-		log_message = HELO failure ref0 (Remote said: HELO $sender_helo_name - Problem: HELO must contain a domain name or ip literal wrapped with square brackets [])
+		#log_message = HELO failure ref0 (Remote said: HELO $sender_helo_name - Problem: HELO must contain a domain name or ip literal wrapped with square brackets [])
 		#delay       = 45s
 
 	# warn if remote tries to send HELO < a local domain >
 	# change from warn to delay & drop to enforce this
-	warn message = HELO failure ref1
+	warn log_message = HELO failure ref1 (Remote said: HELO $sender_helo_name - Problem: HELO name matches a domain listed in local_domains)
 		condition   = ${if match_domain{$sender_helo_name}{+local_domains}{yes}{no}}
 		!hosts      = +wikimedia_nets : +relay_from_hosts
-		log_message = HELO failure ref1 (Remote said: HELO $sender_helo_name - Problem: HELO name matches a domain listed in local_domains)
+		#log_message = HELO failure ref1 (Remote said: HELO $sender_helo_name - Problem: HELO name matches a domain listed in local_domains)
 		#delay       = 45s
 
 	# warn if remote tries to send HELO < my primary hostname >
 	# change from warn to delay & drop to enforce this
-	warn message = HELO failure ref2
+	warn log_message = HELO failure ref2 (Remote said: HELO $sender_helo_name - Problem: HELO name equals my primary_hostname of $primary_hostname)
 		condition   = ${if match{$sender_helo_name}{$primary_hostname}}
 		!hosts      = +wikimedia_nets : +relay_from_hosts
-		log_message = HELO failure ref2 (Remote said: HELO $sender_helo_name - Problem: HELO name equals my primary_hostname of $primary_hostname)
+		#log_message = HELO failure ref2 (Remote said: HELO $sender_helo_name - Problem: HELO name equals my primary_hostname of $primary_hostname)
 		#delay       = 45s
 
 	# warn if remote tries to send HELO < my interface address >
 	# change from warn to delay & drop to enforce this
-	warn message = HELO FAILURE ref3
+	warn log_message = HELO FAILURE ref3 (Remote said: HELO $sender_helo_name - Problem: HELO name matches local interface address $received_ip_address)
 		condition   = ${if eq{[$received_ip_address]}{$sender_helo_name}}
 		!hosts      = +wikimedia_nets : +relay_from_hosts
-		log_message = HELO failure ref3 (Remote said: HELO $sender_helo_name - Problem: HELO name matches local interface address $received_ip_address)
+		#log_message = HELO failure ref3 (Remote said: HELO $sender_helo_name - Problem: HELO name matches local interface address $received_ip_address)
 		#delay       = 45s
 
 	# warn if remote sends HELO with no address literal and no periods
 	# change from warn to delay & drop to enforce this
-	warn message = HELO FAILURE ref4
+	warn log_message = HELO FAILURE ref4 (Remote said: HELO $sender_helo_name - Problem: HELO name does not contain an address literal or a period)
 		condition   = ${if match{$sender_helo_name}{\N^\[\N}{no}{yes}}
 		condition   = ${if match{$sender_helo_name}{\N\.\N}{no}{yes}}
 		!hosts      = +wikimedia_nets : +relay_from_hosts
-		log_message = HELO failure ref4 (Remote said: HELO $sender_helo_name - Problem: HELO name does not contain an address literal or a period)
+		#log_message = HELO failure ref4 (Remote said: HELO $sender_helo_name - Problem: HELO name does not contain an address literal or a period)
 		#delay       = 45s
 
 	accept
