WMCS Cumin: use openstack as default backend
Bug: T175711
Change-Id: I81c03c4edf8929e3e6c0326adc113e0d721f3494

--- a/modules/profile/templates/openstack/main/cumin/config.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/config.yaml.erb
@@ -1,6 +1,6 @@
 transport: clustershell
 log_file: <%= @cumin_log_path %>/cumin.log
-default_backend: direct
+default_backend: openstack
 
 environment:
     SSH_AUTH_SOCK: /run/keyholder/proxy.sock
