role::aqs: add druid options to AQS config and move aqs to profile
Change-Id: I5c78ce68e8351eb0c379e6f9d0109c3388b757a7

--- a/modules/aqs/templates/config.yaml.erb
+++ b/modules/aqs/templates/config.yaml.erb
@@ -18,6 +18,14 @@ aqs_project: &aqs_project
               - name: default.group.local
                 domains: /./
 
+          <%- if @druid_host -%>
+          druid:
+              scheme: <%= @druid_scheme %>
+              host: <%= @druid_host %>
+              port: <%= @druid_port %>
+              query_path: <%= @druid_query_path %>
+          <%- end -%>
+
 # Swagger spec root.
 spec: &spec
   title: "The Analytics RESTBase root"
