--- a/modules/aqs/templates/config.yaml.erb
+++ b/modules/aqs/templates/config.yaml.erb
@@ -18,6 +18,12 @@ aqs_project: &aqs_project
               - name: default.group.local
                 domains: /./
 
+          druid:
+              scheme: <%= @druid_scheme %>
+              host: <%= @druid_host %>
+              port: <%= @druid_port %>
+              query_path: <%= @druid_query_path %>
+
 # Swagger spec root.
 spec: &spec
   title: "The Analytics RESTBase root"
