[WIP] Add druid options to AQS config
Questions before merging:
* better way to list the druid hosts instead of hard-coding them?
* where/how do I make the passwords to include with ::passwords::aqs::..

Change-Id: I5c78ce68e8351eb0c379e6f9d0109c3388b757a7

--- a/modules/aqs/templates/config.yaml.erb
+++ b/modules/aqs/templates/config.yaml.erb
@@ -18,6 +18,14 @@ aqs_project: &aqs_project
               - name: default.group.local
                 domains: /./
 
+          druid:
+              hosts: <%= Array(@druid_hosts).join(',') %>
+              scheme: <%= @druid_scheme %>
+              port: <%= @druid_port %>
+              query_path: <%= @druid_query_path %>
+              http_auth_user: <%= @druid_http_auth_user %>
+              http_auth_password: <%= @druid_http_auth_password %>
+
 # Swagger spec root.
 spec: &spec
   title: "The Analytics RESTBase root"
